--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
+  <% if current_user %>
+    <script>
+      window.currentUser = <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>;
+    </script>
+  <% end %>
+
   <body>
     <%= yield %>
   </body>
